[package]
name = "git_operation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
chrono = "0.4"
regex = "1.5.4"
clap = { version = "4.2.4", features = ["derive"] }
toml="0.7.3"
walkdir = "2.3.2"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "2.0.10"
tempfile = "3.2.0"